Changes from jTDS 0.9.1
=======================

01/24/2005 - Mike Hutchinson
 o Fixed bug [1107105] Sybase updateable cursor error (a null pointer exception 
   is thrown in CachedResultSet during an update).
 o Amended the logic for downgrading the preparesql property values in
   ConnectionJDBC2 as it was possible to select invalid options for Sybase and
   SQL 6.5.
 o Prevent JtdsPreparedStatement.setUnicodeStream from throwing an array index
   exception when the length of the supplied stream exceeded the declared
   length.
 o When using preparesql=0, the driver would send zero length byte arrays as
   null. This is wrong as the column should have a zero length non null value;
   however, Sybase/SQL 6.5 do not permit zero length binary columns so the
   driver has to output a single byte value instead. Amended
   Support.embedData() to fix this problem.
 o Related to the point above, TdsData.writeParam and writeTds5Param do the
   wrong thing and output a zero length byte value as a null. Amended TdsData
   to fix this problem.
 o It is possible for Support.embedData to output a decimal literal that
   exceeds the precision of the server. Amended embedData to truncate value
   string.
 o In TdsCore.executeSQL the inbatch flag is reset prematurely causing batched
   prepared statements to fail to substitute parameters correctly. Amended
   executeSQL to ensure that flag is reset after last packet sent.

01/21/2005 - Alin Sinpalean
 o Changed the home page title to "jTDS JDBC Driver".

01/17/2005 - Alin Sinpalean
 o Updated typemap.html to reflect the mapping of IMAGE to BLOB and TEXT/NTEXT
   to CLOB.
 o Added BLOB and CLOB information to JtdsDatabaseMetaData.supportsConvert().

01/14/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1101251] SSL Connection Problem.
 o Added README.SSL to the build, updated FAQ and feature matrix.
 o Added "ssl" property to the DataSource.

01/13/2005 - Alin Sinpalean
 o Added readme for SSL.