@@ -54,7 +54,7 @@ import java.util.LinkedList;
  * @see java.sql.ResultSet
  *
  * @author Mike Hutchinson
- * @version $Id: JtdsStatement.java,v 1.26 2005-01-10 12:17:26 alin_sinpalean Exp $
+ * @version $Id: JtdsStatement.java,v 1.27 2005-01-24 14:09:53 alin_sinpalean Exp $
  */
 public class JtdsStatement implements java.sql.Statement {
     /*
@@ -871,7 +871,7 @@ public class JtdsStatement implements java.sql.Statement {
             throw new SQLException(
                     Messages.get("error.generic.badoption",
                             Integer.toString(autoGeneratedKeys),
-                            "executeUpate"),
+                            "executeUpdate"),
                     "HY092");
         }
 
@@ -916,7 +916,7 @@ public class JtdsStatement implements java.sql.Statement {
         } else {
             throw new SQLException(Messages.get("error.generic.badoption",
                                                       Integer.toString(autoGeneratedKeys),
-                                                      "executeUpate"),
+                                                      "execute"),
                                    "HY092");
         }
 
